[gd_scene load_steps=6 format=3 uid="uid://nj1swdywi68u"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_4ofit"]

[sub_resource type="LabelSettings" id="LabelSettings_a3ixo"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_0hx0g"]
font_size = 11
font_color = Color(0.991817, 0.0905841, 0.104254, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcxef"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6065"]
bg_color = Color(0.404511, 0.404511, 0.404511, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_4ofit")

[node name="Title" type="Label" parent="."]
offset_left = 485.0
offset_top = 105.0
offset_right = 722.0
offset_bottom = 158.0
text = "TIC TAC TOE"
label_settings = SubResource("LabelSettings_a3ixo")
horizontal_alignment = 1

[node name="special_chars" type="Label" parent="."]
visible = false
offset_left = 428.0
offset_top = 261.0
offset_right = 613.0
offset_bottom = 277.0
text = "Special characters are not allowed."
label_settings = SubResource("LabelSettings_0hx0g")

[node name="special_chars_underline" type="ColorRect" parent="."]
visible = false
offset_left = 426.0
offset_top = 259.0
offset_right = 790.0
offset_bottom = 261.0
color = Color(0.721729, 0.0241526, 0.0508434, 1)

[node name="Username_Label" type="Label" parent="."]
offset_left = 325.0
offset_top = 222.0
offset_right = 405.0
offset_bottom = 251.0
text = "Username"

[node name="Username" type="TextEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 423.0
offset_top = 213.0
offset_right = 794.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
text = "Anonymous"

[node name="find_button" type="Button" parent="."]
offset_left = 343.0
offset_top = 344.0
offset_right = 860.0
offset_bottom = 458.0
text = "Find a game"

[node name="progress_bar" type="ProgressBar" parent="."]
visible = false
offset_left = 351.0
offset_top = 463.0
offset_right = 850.0
offset_bottom = 480.0
theme_override_styles/background = SubResource("StyleBoxFlat_lcxef")
theme_override_styles/fill = SubResource("StyleBoxFlat_p6065")
rounded = true
show_percentage = false
indeterminate = true
editor_preview_indeterminate = false

[connection signal="text_changed" from="Username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="find_button" to="." method="_on_button_pressed"]
